2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/svg.c
	* plug-ins/common/tiff-load.c
	* plug-ins/common/postscript.c
	* plug-ins/common/poppler.c: added missing calls to
	gimp_window_set_transient().

	* libgimp/gimppixbuf.c (gimp_layer_new_from_pixbuf): reduced
	number of progress updates.

2007-05-14  Michael Natterer  <mitch@gimp.org>

	* app/file/file-utils.c (file_utils_filename_to_uri): fix check on
	the GError returned by file_utils_filename_is_uri().

2007-05-14  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpenv.c: #include <CoreServices/CoreServices.h>,
	not "...".

2007-05-14  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpenv.c: 

	* configure.in: added check for OSX' Carbon framework.

	* libgimpbase/Makefile.am (libgimpbase_2_0_la_LDFLAGS): add
	$(CARBON_LDFLAGS)

	* libgimpbase/gimpenv.c (gimp_user_directory): add Carbon version.

	(find_folder): new Crabon-only utility function.

2007-05-14  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-transform.c: fixed gtk-doc comment.

2007-05-14  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpmodule.c: add binding for gimp_user_directory().

2007-05-14  Michael Natterer  <mitch@gimp.org>

	* app/file/file-utils.[ch] (file_utils_filename_is_uri): new function,
	fixed and factored out of file_utils_filename_to_uri().

	* app/main.c (gimp_dbus_open): use it here instead of a simple
	strstr(filename, "://").

2007-05-14  Tor Lillqvist  <tml@novell.com>

	* libgimpbase/gimpenv.c: Undef DATADIR before including <shlobj.h>
	to avoid collision with DATADIR enum in objidl.h. Define
	CSIDL_MYDOCUMENTS, CSIDL_MYMUSIC and CSIDL_MYVIDEO in case missing
	from shlobj.h.

	* libgimpbase/Makefile.am: Link with -lole32 on Win32 for
	CoTaskMemFree().

2007-05-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_new): add a
	shortcut to the user's Pictures folder.

	* libgimpbase/xdg-user-dir.c: cosmetic changes.
